monster-button: implemented the monster button

--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -1,7 +1,7 @@
 <sl-canvas>
     <sl-panel>
         <sl-player-stats></sl-player-stats>
-        <sl-monster></sl-monster>
+        <sl-monster [player]="player" [weapon]="weapon"></sl-monster>
         <sl-spells></sl-spells>
     </sl-panel>
     <sl-panel></sl-panel>
