--- a/src/app/components/warzone/monster/monster-button/monster-button.component.html
+++ b/src/app/components/warzone/monster/monster-button/monster-button.component.html
@@ -1,3 +1,12 @@
 <div class="monster-button">
-    im furious monster
+    <button (click)="onClick()" [class.monster-button--clicked]="buttonClicked">
+        <img
+            class="monster-button__image"
+            [src]="'/assets/images/monsters/'
+      + monster.number
+      + '_'
+      + monster.name
+      + '.png'"
+            alt="">
+    </button>
 </div>
