--- a/src/app/components/warzone/monster/monster.component.html
+++ b/src/app/components/warzone/monster/monster.component.html
@@ -3,7 +3,11 @@
 <div style="height: 16rem;"></div>
 <sl-monster-background [monster]="monster">
     <sl-progress-bar>DPS</sl-progress-bar>
-    <sl-monster-button></sl-monster-button>
+    <sl-monster-button
+        [monster]="monster"
+        [playerWeaponDamage]="weapon.strength"
+        (damageToMonster)="onDamageToMonster($event)"
+    ></sl-monster-button>
     <sl-progress-bar>monster health</sl-progress-bar>
     <sl-army></sl-army>
 </sl-monster-background>
