--- a/src/app/components/warzone/monster/monster-background/monster-background.component.scss
+++ b/src/app/components/warzone/monster/monster-background/monster-background.component.scss
@@ -1,4 +1,7 @@
 .monster-background {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
   position: relative;
   width: 100%;
   height: 0;
