--- a/src/app/components/warzone/player-stats/player-stats.component.html
+++ b/src/app/components/warzone/player-stats/player-stats.component.html
@@ -1,5 +1,13 @@
-<sl-progress-bar>Level</sl-progress-bar>
-<sl-progress-bar>health</sl-progress-bar>
-<sl-progress-bar>xp</sl-progress-bar>
-<sl-progress-bar>mana</sl-progress-bar>
-<sl-progress-bar>gold</sl-progress-bar>
+<div class="player-stats">
+    <sl-progress-bar>Level {{ player.level }}</sl-progress-bar>
+    <sl-progress-bar
+        icon="heart"
+        label="health"
+        [totalValue]="playerMaxHealth"
+        [currentValue]="player.health"
+        [color]="ColorsEnum.bloodRed"
+    ></sl-progress-bar>
+    <sl-progress-bar icon="xp" [totalValue]="" [currentValue]="player.xp"></sl-progress-bar>
+    <sl-progress-bar icon="mana"></sl-progress-bar>
+    <sl-progress-bar icon="gold" iconSize="medium"></sl-progress-bar>
+</div>
