--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -1,6 +1,6 @@
 <sl-canvas>
     <sl-panel>
-        <sl-player-stats></sl-player-stats>
+        <sl-player-stats [player]="player"></sl-player-stats>
         <sl-monster [player]="player" [weapon]="weapon"></sl-monster>
         <sl-spells></sl-spells>
     </sl-panel>
