--- a/src/assets/styles/variables/_colors.scss
+++ b/src/assets/styles/variables/_colors.scss
@@ -1,6 +1,12 @@
+
 $canvas-bg: #131315;
+$gray-100: #2f2f30;
+$gray-200: #3f3f40;
+$gray-300: #4f4f50;
+$gray-400: #5f5f60;
+
 $level-blue: #7874FD;
 $level-gray: #8FA9B1;
 
-$blood-red: #510300;
+$blood-red: #a53416;
 $gold: #b38314;
