--- a/src/app/components/warzone/monster/monster-button/monster-button.component.scss
+++ b/src/app/components/warzone/monster/monster-button/monster-button.component.scss
@@ -7,16 +7,17 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 4rem auto 0;
+  margin: 5% auto;
 
   transition: all 1s ease-out;
   width: 100%;
   height: 100%;
-  //max-width: 178px;
 }
 
 .monster-button__image {
-  padding: 1rem 2rem 2rem 3.8rem;
+  height: 100%;
+  width: 100%;
+  padding: 3.2rem;
   image-rendering: pixelated;
 }
 
