--- a/src/app/components/warzone/monster/monster-button/monster-button.component.scss
+++ b/src/app/components/warzone/monster/monster-button/monster-button.component.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 5% auto;
+  margin: 0 auto;
 
   transition: all 1s ease-out;
   width: 100%;
