--- a/src/app/components/warzone/monster/monster.component.html
+++ b/src/app/components/warzone/monster/monster.component.html
@@ -1,5 +1,5 @@
 <sl-monster-background [monster]="monster">
-    <sl-progress-bar>DPS</sl-progress-bar>
+    <sl-progress-bar></sl-progress-bar>
     <sl-monster-button
         [monster]="monster"
         [playerWeaponDamage]="weapon.strength"
