--- a/src/assets/styles/variables/_typography.scss
+++ b/src/assets/styles/variables/_typography.scss
@@ -1,3 +1,7 @@
+$font-josefin-sans: 'Josefin Sans', sans-serif;
+$font-josefin-slab: 'Josefin Slab', serif;
+$font-press-start-2p: 'Press Start 2P', cursive;
+
 $text-xs: 1rem;
 $text-s: 1.2rem;
 $text-m: 1.6rem;
@@ -9,3 +13,4 @@ $title-s: 2rem;
 $title-m: 2.8rem;
 $title-l: 3.4rem;
 $title-xl: 4.2rem;
+
