--- a/src/assets/styles/variables/_colors.scss
+++ b/src/assets/styles/variables/_colors.scss
@@ -6,6 +6,10 @@ $gray-400: #5f5f60;
 $gray-500: #6f6f70;
 $gray-600: #7f7f80;
 $gray-700: #8f8f90;
+$gray-800: #9f9fa0;
+$gray-900: #afafb0;
+$gray-1000: #bfbfc0;
+$gray-1100: #cfcfd0;
 
 
 $level-blue: #7874FD;
