--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -10,7 +10,12 @@
             <sl-shop-item
                 *ngFor="let unlockedShop of unlockedShops"
                 [shop]="unlockedShop"
-                [status]="player.gold >= unlockedShop.price ? undefined : 'disabled'"
+                [status]="player.gold >= unlockedShop.price ? 'unlocked' : 'disabled'"
+            ></sl-shop-item>
+            <sl-shop-item
+                *ngFor="let hintedShop of hintedShops"
+                [shop]="hintedShop"
+                status="hinted"
             ></sl-shop-item>
             <sl-shop-item
                 *ngFor="let lockedShop of lockedShops"
