buildings-farm: wip, buy shops, unlock buildings

--- a/src/app/components/common/progress-bar/progress-bar.component.html
+++ b/src/app/components/common/progress-bar/progress-bar.component.html
@@ -11,7 +11,12 @@
             [title]="label + ': ' + currentValue + ' / ' + totalValue"
         >
             <span class="bar__values" *ngIf="showValues">{{currentValue + ' / ' + totalValue}}</span>
+
         </div>
     </div>
+    <div
+    >
+        <ng-content></ng-content>
+    </div>
 </div>
-<ng-content></ng-content>
+
