--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -1,9 +1,13 @@
 @use "fonts";
 @use "src/assets/styles/variables/colors";
 
+
+
 body {
   box-sizing: border-box;
   background: radial-gradient(circle, transparent 20%, #000000 20%, #000000 80%, transparent 80%, transparent) 0% 0% / 38px 38px, radial-gradient(circle, transparent 20%, #000000 20%, #000000 80%, transparent 80%, transparent) 19px 19px / 38px 38px, linear-gradient(#2f2f30 2px, transparent 2px) 0px -1px / 19px 19px, linear-gradient(90deg, #2f2f30 2px, #000000 2px) -1px 0px / 19px 19px #000000;
   background-size: 38px 38px, 38px 38px, 19px 19px, 19px 19px;
   background-color: #000000;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
