--- a/src/assets/styles/variables/_typography.scss
+++ b/src/assets/styles/variables/_typography.scss
@@ -1,6 +1,7 @@
 $font-josefin-sans: 'Josefin Sans', sans-serif;
 $font-josefin-slab: 'Josefin Slab', serif;
 $font-press-start-2p: 'Press Start 2P', cursive;
+$font-open-sans: 'Open Sans', sans-serif;
 
 $text-xs: 1rem;
 $text-s: 1.2rem;
