--- a/src/app/components/warzone/player-stats/player-stats.component.html
+++ b/src/app/components/warzone/player-stats/player-stats.component.html
@@ -9,5 +9,7 @@
     ></sl-progress-bar>
     <sl-progress-bar icon="xp" [totalValue]="" [currentValue]="player.xp"></sl-progress-bar>
     <sl-progress-bar icon="mana"></sl-progress-bar>
-    <sl-progress-bar icon="gold" iconSize="medium"></sl-progress-bar>
+    <sl-progress-bar icon="gold" iconSize="medium">
+        <span class="player-stats__gold">{{ player.gold }}</span>
+    </sl-progress-bar>
 </div>
