buildings-farm: working on farm building and units

--- a/src/app/components/buildings/farm/farm.component.html
+++ b/src/app/components/buildings/farm/farm.component.html
@@ -1,13 +1,10 @@
 <div class="farm">
-    <div class="farm__units">
-        <sl-unit-list>
-            <sl-unit-item
-                *ngFor="let farmUnit of farmUnits"
-                [unit]="farmUnit"
-            ></sl-unit-item>
-        </sl-unit-list>
-    </div>
-    <div class="farm__upgrades">
-        farm upgrades here nice box etc
-    </div>
+    <sl-unit-list>
+        <sl-unit-item
+            [state]="this.player.gold >= unit.cost ? 'unlocked' : 'disabled'"
+            *ngFor="let unit of unlockedFarmUnits"
+            [unit]="unit"
+            (unitClicked)="this.handleFarmUnitClick($event)"
+        ></sl-unit-item>
+    </sl-unit-list>
 </div>
