--- a/src/app/components/buildings/units/unit-item/unit-item.component.html
+++ b/src/app/components/buildings/units/unit-item/unit-item.component.html
@@ -1,8 +1,16 @@
-<div class="unit-item">
-    <img [src]="'assets/images/buildings/' + unit.building + '/units/' + unit.image + '.png'" class="unit-item__image">
+<div
+    class="unit-item"
+    [class.unit-item--disabled]="state === 'disabled'"
+>
+    <img
+        (click)="onClick()"
+        [src]="'assets/images/buildings/' + unit.building + '/units/' + unit.image + '.png'"
+        class="unit-item__image"
+        [class.unit-item__image--disabled]="state === 'disabled'"
+    >
     <div class="unit-item__name">
-        <span class="unit-item__amount">{{unit.amount}}</span>
-        {{ unit.name}}<span *ngIf="unit.amount !== 1">s</span>
+        <span class="unit-item__amount">{{unit.quantity}}</span>
+        {{ unit.name}}<span *ngIf="unit.quantity !== 1">s</span>
     </div>
     <div class="unit-item__cost">
         <sl-icon icon="gold" size="small"></sl-icon>
