--- a/src/app/components/layout/canvas/canvas.component.scss
+++ b/src/app/components/layout/canvas/canvas.component.scss
@@ -6,8 +6,8 @@
   flex-direction: row;
   box-sizing: border-box;
   flex-grow: 1;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   max-width: 1920px;
   margin: 0 auto;
   padding: 0;
