buildings-farm: working on warzone units

--- a/src/app/components/warzone/monster/monster.component.html
+++ b/src/app/components/warzone/monster/monster.component.html
@@ -11,5 +11,5 @@
         [color]="monster.color"
         [showValues]="true"
     ></sl-progress-bar>
-    <sl-army></sl-army>
+    <ng-content slot="army"></ng-content>
 </sl-monster-background>
