--- a/src/app/components/buildings/units/unit-item/unit-item.component.scss
+++ b/src/app/components/buildings/units/unit-item/unit-item.component.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   gap: 0.4rem;
+  min-width: 9.4rem;
 }
 
 .unit-item--disabled {
@@ -33,9 +34,11 @@
 }
 
 .unit-item__amount {
+  display: inline-block;
   font-family: typography.$font-josefin-sans;
   font-size: 1.4rem;
   font-weight: 600;
+  min-width: 1.2rem;
 }
 
 .unit-item__name {
