--- a/src/app/components/common/progress-bar/progress-bar.component.scss
+++ b/src/app/components/common/progress-bar/progress-bar.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding : 0.2rem;
   margin: 0.8rem 0;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 0.8rem;
 }
 
