--- a/src/app/components/warzone/army/army-unit/army-unit.component.scss
+++ b/src/app/components/warzone/army/army-unit/army-unit.component.scss
@@ -1,11 +1,8 @@
-.army {
+.army-unit {
   pointer-events: none;
   position: absolute;
-  top: 25%;
-  left: 25%;
-  width:50%;
-  height: 50%;
-  border-radius: 50%;
   transform: rotate(0deg);
   transition: transform 0.7s linear;
+  top: -15%;   /* -child size/2 */
+  left: 70%;   /* parent size/2 - child size/2 */
 }
