--- a/src/app/components/warzone/player-stats/player-stats.component.scss
+++ b/src/app/components/warzone/player-stats/player-stats.component.scss
@@ -14,4 +14,5 @@
   line-height: 1.8rem;
   vertical-align: middle;
   padding-top: 0.1rem;
+  margin-bottom: 5.3rem; // remove when mana and xp are implemented
 }
