--- a/src/app/components/warzone/army/army-unit/army-unit.component.html
+++ b/src/app/components/warzone/army/army-unit/army-unit.component.html
@@ -1,4 +1,5 @@
-<div class="army-unit">
+<div class="army-unit"
+>
     <img
         [src]="_ARMY_ICON_PATH + armyUnit.armyIcon + '.png'"
         [alt]="armyUnit.name"
