--- a/src/app/components/warzone/army/army-unit/army-unit.component.scss
+++ b/src/app/components/warzone/army/army-unit/army-unit.component.scss
@@ -6,3 +6,8 @@
   top: -15%;   /* -child size/2 */
   left: 70%;   /* parent size/2 - child size/2 */
 }
+
+.army-unit__image {
+  border: 1.5px solid black;
+  border-radius: 50%;
+}
