--- a/src/app/components/warzone/player-stats/player-stats.component.html
+++ b/src/app/components/warzone/player-stats/player-stats.component.html
@@ -1,5 +1,5 @@
 <div class="player-stats">
-    <sl-progress-bar>Level {{ player.level }}</sl-progress-bar>
+    <sl-progress-bar fontSize="large">Slacker Level {{ player.level }}</sl-progress-bar>
     <sl-progress-bar
         icon="heart"
         label="health"
