--- a/src/app/components/warzone/bubble/bubble.component.html
+++ b/src/app/components/warzone/bubble/bubble.component.html
@@ -1,8 +1,27 @@
-<div [ngStyle]="{top: position.y + 'px', left: position.x + 'px', opacity: opacity}" class="bubble">
-    <span class="bubble__text">
+<div
+    class="bubble"
+    [ngStyle]="{
+    top: position.y + 'px',
+    left: position.x + 'px',
+    opacity: opacity,
+    animationDuration: (duration / 1000) + 's',
+    animationTimingFunction: animationType
+    }"
+>
+    <span
+        class="bubble__text"
+        [class.bubble_text--gold]="type === 'gold'"
+        [class.bubble_text--crit-hit]="type === 'crit-hit'"
+    >
         <span *ngIf="textContent">
             {{ textContent }}
         </span>
-        {{ value }}
+        <span class="bubble__icon">
+            <sl-icon *ngIf="type === 'gold'" icon="gold" size="small"></sl-icon>
+        </span>
+
+        <span class="bubble__value">
+
+        </span>{{ value }}
     </span>
 </div>
