--- a/src/app/components/warzone/monster/monster.component.html
+++ b/src/app/components/warzone/monster/monster.component.html
@@ -1,16 +1,17 @@
 <sl-monster-background [monster]="monster">
-    <sl-progress-bar></sl-progress-bar>
     <sl-monster-button
         [monster]="monster"
         [playerWeaponDamage]="weapon.strength"
         (damageToMonster)="onDamageToMonster($event)"
         (goldDropped)="onGoldDropped($event)"
     ></sl-monster-button>
-    <sl-progress-bar class="monster__health-bar"
+    <sl-progress-bar
+        class="monster__health-bar"
         [totalValue]="monsterTotalHealth"
         [currentValue]="monster.health"
         [color]="monster.color"
         [showValues]="true"
+        fontSize="medium"
     ></sl-progress-bar>
     <ng-content select="[slot=army]"></ng-content>
 </sl-monster-background>
