--- a/src/app/components/warzone/army/army-unit/army-unit.component.html
+++ b/src/app/components/warzone/army/army-unit/army-unit.component.html
@@ -1,6 +1,7 @@
 <div class="army-unit"
 >
     <img
+        #unitIcon
         [src]="_ARMY_ICON_PATH + armyUnit.armyIcon + '.png'"
         [alt]="armyUnit.name"
         class="army-unit__image"
