--- a/src/app/components/warzone/monster/monster-button/monster-button.component.scss
+++ b/src/app/components/warzone/monster/monster-button/monster-button.component.scss
@@ -17,7 +17,7 @@
 .monster-button__image {
   height: 100%;
   width: 100%;
-  padding: 3.2rem;
+  padding: 8.2rem 3.2rem 1.2rem 3.2rem;
   image-rendering: pixelated;
 }
 
