--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -2,6 +2,7 @@
     <sl-panel>
         <sl-player-stats [player]="player"></sl-player-stats>
         <sl-monster
+            [activeMonster]="activeMonster.number"
             [player]="player"
             [weapon]="weapon"
         >
